--- a/views/edit-profile-page.ejs
+++ b/views/edit-profile-page.ejs
@@ -39,7 +39,7 @@
           display: block;
           text-align: right;
         ">
-                <button style="width: 50px; position: relative">Save</button>
+                <button>Save</button>
             </div>
         </form>
     </div>
