--- a/views/new_poll_page.ejs
+++ b/views/new_poll_page.ejs
@@ -24,7 +24,7 @@
           display: block;
           text-align: right;
         ">
-                <button style="width: 50px; position: relative">Add</button>
+                <button>Add</button>
             </div>
         </form>
     </div>
