--- a/assets/scss/new_post.scss
+++ b/assets/scss/new_post.scss
@@ -38,6 +38,7 @@
         box-sizing: border-box;
         word-wrap: break-word;
         overflow: hidden;
+        text-transform: capitalize;
     }
     div {
         margin: auto;
@@ -111,13 +112,17 @@
                 }
             }
             button {
-                padding: 5px 10px 5px 10px;
-                font-weight: 700;
+                // padding: 5px 10px 5px 10px;
+                // font-weight: 700;
                 color: white;
                 display: inline-block;
-                width: 50px;
-                max-width: 150px;
+                // width: 50px;
+                // max-width: 150px;
                 position: relative;
+                padding: 10px 20px 10px 20px;
+                width: auto;
+                font-size: 18;
+                font-weight: 700;
                 background-color: #0a66c2;
                 border-color: #0a66c2;
                 &:hover {
