--- a/assets/scss/option-page.scss
+++ b/assets/scss/option-page.scss
@@ -123,7 +123,7 @@
         // overflow-wrap: break-word;
         word-wrap: break-word;
     }
-    a {
+    .link {
         text-decoration: none;
         color: black;
         background-color: white;
@@ -133,11 +133,20 @@
         border-radius: 2%;
         border-bottom: 1px solid black; // box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.623);
         // transition: 0.3s;
-        div {
+        display: flex;
+        flex-direction: row;
+        // align-items: space-between;
+        // background-color: yellow;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        .option {
             display: flex;
             flex-direction: row;
+            // align-items: center;
+            justify-content: flex-start;
             flex-wrap: wrap;
             padding: 2px;
+            // background-color: red;
             img {
                 height: 50px;
                 width: 50px;
@@ -153,5 +162,19 @@
         &:hover {
             box-shadow: 0 4px 8px 4px rgba(0, 0, 0, 0.2);
         }
+    }
+}
+
+.select-button {
+    position: relative;
+    padding: 8px 16px 8px 16px;
+    background-color: rgba(65, 105, 225, 0.89);
+    border-color: rgba(65, 105, 225, 0.788);
+    color: white;
+    font-size: 16;
+    font-weight: 600;
+    border-radius: 5px;
+    &:hover {
+        background-color: rgb(34, 79, 214);
     }
 }
