--- a/assets/scss/team.scss
+++ b/assets/scss/team.scss
@@ -3,7 +3,7 @@
     // height: auto;
     overflow: hidden;
     height: auto;
-    min-height: 150px;
+    min-height: 200px;
     // height: 200px;
     // &:hover {
     //     height: 600px;
@@ -32,5 +32,17 @@
         color: black;
         font-size: 25;
         font-weight: 900;
+    }
+}
+
+.profile-link {
+    text-decoration: none;
+    color: white;
+    word-wrap: break-word;
+    overflow: hidden;
+    display: inline-block;
+    height: inherit;
+    &:hover {
+        text-decoration: underline;
     }
 }
