--- a/views/new_alert_page.ejs
+++ b/views/new_alert_page.ejs
@@ -23,7 +23,7 @@
           display: block;
           text-align: right;
         ">
-                <button style="width: 50px; position: relative">Post</button>
+                <button>Post</button>
             </div>
             <!-- <button id="post-btn">Post</button> -->
         </form>
