--- a/views/new_notice_page.ejs
+++ b/views/new_notice_page.ejs
@@ -20,7 +20,7 @@
           display: block;
           text-align: right;
         ">
-                <button style="width: 50px; position: relative">Post</button>
+                <button>Post</button>
             </div>
         </form>
     </div>
