--- a/views/new_post_page.ejs
+++ b/views/new_post_page.ejs
@@ -21,7 +21,7 @@
           display: block;
           text-align: right;
         ">
-                <button style="width: 50px; position: relative">Post</button>
+                <button>Post</button>
             </div>
         </form>
     </div>
