--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -17,17 +17,18 @@
             <div id="bio">
                 <span style="font-size: 22"><%=user_profile.name%></span>
                 <br />
-                <span style="color: rgb(51, 49, 49)"><%=user_profile.bio%></span>
-            </div>
-            <div id="buttons">
-                <%if(locals.user && locals.user.id==user_profile.id){%>
-                    <a href="/user/edit-profile-page"><button>Edit Profile</button></a>
-                    <%}%>
-                        <%if((locals.user.onModel=='Student' &&
+                <span style="color: rgb(51, 49, 49); word-wrap: break-word"><%=user_profile.bio%></span
+        >
+      </div>
+      <div id="buttons">
+        <%if(locals.user && locals.user.id==user_profile.id){%>
+        <a href="/user/edit-profile-page"><button>Edit Profile</button></a>
+        <%}%> <%if((locals.user.onModel=='Student' &&
         locals.user_profile.onModel!='Student')||(locals.user.onModel!='Student'
         && locals.user_profile.onModel=='Student')){%>
-                            <%if(locals.user.related.members.includes(locals.user_profile.id)){%>
-                                <a href="/user/remove-membership?target=<%=locals.user_profile.id%>"><button>Remove</button></a
+        <%if(locals.user.related.members.includes(locals.user_profile.id)){%>
+        <a href="/user/remove-membership?target=<%=locals.user_profile.id%>"
+          ><button>Remove</button></a
         >
         <%} else
         if(locals.user.related.sendRequest.includes(locals.user_profile.id)){%>
@@ -64,18 +65,34 @@
               style="margin: 0px 5px 0px 15px; transition: all 0.9s linear"
             /></button
         ></a>
-            </div>
-        </div>
+      </div>
+
+      <%if(locals.user&& locals.user_profile && locals.user.id==user_profile.id
+      && locals.user.onModel!='Student'){%>
+      <div style="position: absolute; bottom: 25px; right: 20px">
+        <a
+          href="/creator/add-new-team-member-select-user"
+          style="text-decoration: none; color: black"
+          ><abbr title="Add or update Team member"
+            ><img
+              height="50px"
+              width="50px"
+              src="https://cdn-icons-png.flaticon.com/512/3820/3820188.png"
+              alt="add" /></abbr
+        ></a>
+      </div>
+      <%}%>
     </div>
-    <!-- wrap contact with another div container to add transition in height property 
+  </div>
+  <!-- wrap contact with another div container to add transition in height property 
     wrap bcz transition with display: none property are not allowed
     -->
-    <div id="contact-container">
-        <div id="contact">
-            <h1>Contacts</h1>
-            <div id="details">
-                <div id="email">
-                    <abbr title="Email">
+  <div id="contact-container">
+    <div id="contact">
+      <h1>Contacts</h1>
+      <div id="details">
+        <div id="email">
+          <abbr title="Email">
             <a href="mailto:<%=user_profile.email%>">
               <img
                 height="40px"
@@ -84,11 +101,11 @@
                 alt="email"
             /></a>
           </abbr>
-                    <a href="mailto:<%=user_profile.email%>" id="span-link-email">
-                        <span><%=user_profile.email%></span></a>
-                </div>
-                <div id="whatsapp">
-                    <abbr title="Whatsapp">
+          <a href="mailto:<%=user_profile.email%>" id="span-link-email">
+            <span><%=user_profile.email%></span></a>
+            </div>
+            <div id="whatsapp">
+                <abbr title="Whatsapp">
             <a href="sms:<%=user_profile.whatsapp%>">
               <img
                 height="40px"
@@ -97,16 +114,16 @@
                 alt="whatsapp"
             /></a>
           </abbr>
-                    <a href="sms:<%=user_profile.whatsapp%>" id="span-link-whatsapp">
-                        <%if(user_profile.whatsapp){%>
-                            <span><%=user_profile.whatsapp%></span>
-                            <%}else{%>
-                                <span>Whatsapp number not updated </span>
-                                <%}%>
-                    </a>
-                </div>
-                <div id="mobile">
-                    <abbr title="Mobile">
+                <a href="sms:<%=user_profile.whatsapp%>" id="span-link-whatsapp">
+                    <%if(user_profile.whatsapp){%>
+                        <span><%=user_profile.whatsapp%></span>
+                        <%}else{%>
+                            <span>Whatsapp number not updated </span>
+                            <%}%>
+                </a>
+            </div>
+            <div id="mobile">
+                <abbr title="Mobile">
             <a href="tel:<%=user_profile.mobile%>"
               ><img
                 height="40px"
@@ -115,67 +132,71 @@
                 alt="mobile"
             /></a>
           </abbr>
-                    <a href="tel:<%=user_profile.mobile%>" id="span-link-mobile">
-                        <%if(user_profile.mobile){%>
-                            <span><%=user_profile.mobile%></span>
-                            <%}else{%>
-                                <span>Mobile number not updated </span>
-                                <%}%>
-                    </a>
-                </div>
+                <a href="tel:<%=user_profile.mobile%>" id="span-link-mobile">
+                    <%if(user_profile.mobile){%>
+                        <span><%=user_profile.mobile%></span>
+                        <%}else{%>
+                            <span>Mobile number not updated </span>
+                            <%}%>
+                </a>
             </div>
         </div>
     </div>
+</div>
 
-    <%if(locals.user_profile && locals.user_profile.onModel!='Student'){%>
-        <div id="Admin">
-            <h1>Admin</h1>
-            <%if(locals.user_profile.related.admin){%>
+<%if(locals.user_profile && locals.user_profile.onModel!='Student'){%>
+    <div id="Admin">
+        <h1>Admin</h1>
+        <%if(locals.user_profile.related.admin){%>
+
+            <div>
+                <div>
+                    <img src="<%=locals.user_profile.related.admin.pic%>" alt="pic" height="50px" width="50px" style="border-radius: 50%" />
+                </div>
+                <div>
+                    <span><%=locals.user_profile.related.admin.name%></span>
+                    <span><%=locals.user_profile.related.admin.email%></span>
+                </div>
+            </div>
+            <%}else{%>
+                <div style="color: red">No admin</div>
+                <%}%>
+    </div>
+    <%}%>
+        <%if(locals.user_profile && locals.user_profile.onModel=='Student' &&
+  locals.user_profile.related.head){%>
+            <div id="Head">
+                <h1>Head</h1>
 
                 <div>
                     <div>
-                        <img src="<%=locals.user_profile.related.admin.pic%>" alt="pic" height="50px" width="50px" style="border-radius: 50%" />
+                        <img src="<%=locals.user_profile.related.head.pic%>" alt="pic" height="50px" width="50px" style="border-radius: 50%" />
                     </div>
                     <div>
-                        <span><%=locals.user_profile.related.admin.name%></span>
-                        <span><%=locals.user_profile.related.admin.email%></span>
+                        <span><%=locals.user_profile.related.head.name%></span>
+                        <span><%=locals.user_profile.related.head.email%></span>
                     </div>
                 </div>
-                <%}else{%>
-                    <div style="color: red">No admin</div>
-                    <%}%>
-        </div>
-        <%}%>
-            <%if(locals.user_profile && locals.user_profile.onModel=='Student' &&
-  locals.user_profile.related.head){%>
-                <div id="Head">
-                    <h1>Head</h1>
-
-                    <div>
-                        <div>
-                            <img src="<%=locals.user_profile.related.head.pic%>" alt="pic" height="50px" width="50px" style="border-radius: 50%" />
-                        </div>
-                        <div>
-                            <span><%=locals.user_profile.related.head.name%></span>
-                            <span><%=locals.user_profile.related.head.email%></span>
-                        </div>
-                    </div>
-                </div>
-                <%}%>
-                    <%if(locals.user_profile&& locals.user_profile.onModel=='Hostel'){%>
-                        <%-include('./mess',{_user:user_profile});%>
-                            <%}%>
-                                <%-include('./team');%>
-                                    <%if(locals.user_profile && locals.user_profile.onModel!='Student'){%>
-                                        <div id="all-posts">
-                                            <h1>
-                                                <span class="head-span active" id="span-1" onclick="changeTab('span-1')"><img
+            </div>
+            <%}%>
+                <%if(locals.user_profile&& locals.user_profile.onModel=='Hostel'){%>
+                    <%-include('./mess',{_user:user_profile});%>
+                        <%}%>
+                            <%if(locals.user_profile &&
+  locals.user_profile.onModel!='Student'){%>
+                                <%-include('./team',{_user:user_profile});%>
+                                    <%}%>
+                                        <%if(locals.user_profile &&
+  locals.user_profile.onModel!='Student'){%>
+                                            <div id="all-posts">
+                                                <h1>
+                                                    <span class="head-span active" id="span-1" onclick="changeTab('span-1')"><img
           src="https://cdn-icons-png.flaticon.com/512/6276/6276430.png"
           alt=""
         />
         <sub style="font-size: 18">Posts</sub>
       </span>
-                                                <span class="head-span" id="span-2" onclick="changeTab('span-2')"><img
+                                                    <span class="head-span" id="span-2" onclick="changeTab('span-2')"><img
           src="https://cdn-icons-png.flaticon.com/512/3143/3143636.png"
           alt=""
         /><sub style="font-size: 18">Events</sub></span
